# KV-Experiments

./: .gitignore  CLAUDE.md  HACKATHON_LOG.md  NOTICE.md  README.md  TALK_DRAFT.md  generate_talk_figures.py  mlflow.db  pyproject.toml
analysis/: campaign5_confound_analysis.py
claim-review/: CLAIMS.md  GLOSSARY.md  README.md  sources.md
code/: 01_cache_inspection.py  01b_cognitive_modes.py  01c_batch_replication.py  01d_adversarial_controls.py  01e_controls_visualization.py  01e_tokenizer_confound.py  02a_basic_transfer.py  02b_projector_transfer.py  03_scale_sweep.py  03b_identity_signatures.py  03c_scale_sweep_visualization.py  03d_identity_visualization.py  04_deception_forensics.py  04b_deception_visualization.py  04b_natural_deception.py  05_layer_map.py  05b_layer_map_visualization.py  06_temporal_evolution.py  06b_temporal_visualization.py  07_abliteration_geometry.py  07_individuation_geometry.py  07b_individuation_controls.py  08_input_only_geometry.py  09_sycophancy_detection.py  10_societies_of_thought.py  11_rdct_stability.py  12_bloom_taxonomy.py  13_c2c_replication.py  14_confabulation_detection.py  15_refusal_geometry.py  16_direction_sweep.py  16b_c7_permutation.py  17_token_trajectory.py  17b_adversarial_controls.py  18_cross_condition_transfer.py  18b_same_prompt_deception.py  19_transfer_improvement.py  20_category_geometry.py  21_self_referential_analysis.py  22_red_team_confounds.py  (+37 more)
docs/: BELIEF_DEATH_BRIDGE.md  CAMPAIGN_5_CACHE_DYNAMICS.md  FTC_HACKATHON_PLAN.md  HACKATHON_LOG.md  PITCH_NUMBERS.md
kv_verify/: .gitignore  README.md  config.py  (+19 more)
(+268 files in other folders)
