[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "kv-verify"
version = "0.1.0"
description = "KV-Cache experiment verification pipeline"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0",
    "transformers>=4.35",
    "accelerate>=0.24",
]
tracking = [
    "mlflow>=2.0",
]
all = [
    "kv-verify[gpu,tracking]",
]

[project.scripts]
kv-verify = "kv_verify.__main__:main"

[tool.setuptools.packages.find]
include = ["kv_verify*"]
